--- a/Website/styles1.css
+++ b/Website/styles1.css
@@ -1,4 +1,8 @@
-/* navigation bar: */
+body {
+/* padding: 0; */
+/* max-width: 50em; */
+font-family: 'Baloo Bhai 2', cursive;
+}
 
 /* Add a black background color to the top navigation */
 .topnav {
@@ -6,6 +10,7 @@
   overflow: hidden;
   font-family: 'Baloo Bhai 2', cursive;
 }
+
 .topnav {
   list-style-type: none;
   margin: 0;
@@ -38,11 +43,54 @@
   font-family: 'Baloo Bhai 2', cursive;
 }
 
-/* Title */
-html {
-font-family: 'Baloo Bhai 2', cursive;
+h1 {
+  color: #d53369;
+  font-size: 40px;
+  margin-left: 420px;
+  margin-right: 360px;
 }
 
-p {margin-left: 300px;
-  margin-right: 300px
+img {
+  margin-left: 390px;
+}
+
+p {
+  margin-left: 280px;
+  margin-right: 260px;
+  color: #d53369;
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  color:#d53369;
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */
+  border: 1px solid #d53369; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #d53369;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #334cd1
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
