--- a/Website/stylesPPF.css
+++ b/Website/stylesPPF.css
@@ -1,11 +1,17 @@
 /* navigation bar: */
 
+body {
+/* padding: 0; */
+/* max-width: 50em; */
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #d53369;
   overflow: hidden;
   font-family: 'Baloo Bhai 2', cursive;
 }
+
 .topnav {
   list-style-type: none;
   margin: 0;
@@ -39,37 +45,57 @@
 }
 
 /* Title */
+
 html {
 font-family: 'Baloo Bhai 2', cursive;
 }
 
+body {
+    /* padding: 5em; */
+    /* max-width: 50em; */
+}
+
+.header {
+  font-size: 50px;
+  color: #d53369;
+}
+
+.introparagraph {
+  font-size: 20px;
+  margin-left: 250px;
+  margin-right: 250px;
+  color: #334cd1
+}
+
 h2 {
-  margin-left: 400px;
-  margin-right: 400px;
-  font-size: 20px
-}
-h3 {
-  margin-left: 150px;
-  font-size: 25px
+  font-size: 35px;
+  color: #d53369;
+  margin-left: 150px
 }
 
-h4 {
+.name {
+  font-size: 25px;
   margin-left: 300px;
-  font-size: 20px
+  color:#334cd1
 }
 
-img {
-  margin-left: 400px
-}
-div {
-  margin-right: 400px;
-  margin-left: 300px
+.photo1 {
+  margin-left: 400px;
+  margin-right: 500px
 }
 
-h4{
+.photo2 {
+  margin-left: 250px;
   margin-right: 400px
 }
 
-img {
-  margin-left: 400px
+.photo3 {
+  margin-left: 350px;
+  margin-right: 800px
+}
+
+p {
+  color: #334cd1;
+  margin-left: 200px;
+  margin-right: 200px
 }
